# mangacross-rss

./: Cargo.toml
.github/workflows/: ci.yml
crates/mangacross-rss/: Cargo.toml
crates/mangacross-rss-cli/: Cargo.toml
crates/mangacross-rss-cli/src/: main.rs
crates/mangacross-rss/src/: config.rs  lib.rs  mangacross.rs
example/: config.json
