[package]
name = "mangacross-rss-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
mangacross-rss = { path = "../mangacross-rss" }
serde.workspace = true
serde_json.workspace = true 
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
