[package]
name = "mangacross-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.21"
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls"] }
rss = "2.0.0"
serde.workspace = true
serde_json.workspace = true 
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
